<RelativeLayout
    android:id="@+id/settingsFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.mike.videorecognition.SettingsFragment">
    <TextView
        android:id="@+id/settingsCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsFragment"
        android:layout_alignParentTop="true"
        android:gravity="center"/>
    <RelativeLayout
        android:id="@+id/buttonsPanel"
        android:layout_below="@+id/settingsCaption"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/settingsSaveAndReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsSaveAndReturn"
            android:onClick="itemOnClick"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:id="@+id/settingsReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsReturn"
            android:onClick="itemOnClick"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/buttonsPanel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp">

        <LinearLayout
            android:id="@+id/settingsLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rootPath"/>
            <EditText
                android:id="@+id/rootPath"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dbPath"/>
            <EditText
                android:id="@+id/dbPath"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filesPath"/>
            <EditText
                android:id="@+id/filesPath"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
